Add support for side crops, like cocoa beans, to PlantCrop